Incompatible is less serious.
Ensure that the message regarding incompatible nodes is explicitly
clear and doesn't trigger errors.

This is necessary because even in a pure 1.4.1 cluster, depending on
how nodes are started capability negotation might take a few seconds,
where some nodes will be shown as incompatible.

Conflicts:
	priv/admin/js/generated/templates.js

--- a/priv/admin/css/snapshot.styl
+++ b/priv/admin/css/snapshot.styl
@@ -18,7 +18,15 @@ CSS to be applied ONLY on the snapshot page
       
     h3
       margin-top : 30px
+      line-height : 1.5
       
+    h4
+      copy-font()
+      margin-top : 20px
+      font-size: 14px
+      font-style: italic
+      line-height : 1.5
+
     ul
       margin : 10px 0 0 20px
     
