Add loading spinners to each state.
- New handlebars conditions in every state that will
show spinners until data is ready.
- New CSS to handle placement and look of loading messages

--- a/priv/admin/css/general.styl
+++ b/priv/admin/css/general.styl
@@ -206,6 +206,23 @@ footer
   display    : block
   background : transparent
 
+.page-loading
+  dimensions(100%, 100%)
+  minDimensions(100%, 300px)
+  corners()
+  position   : relative
+  margin-top : 35px
+
+  .loading-info
+    dimensions(300px, 75px)
+    absoluteLeft(50%, 50%)
+    margin-top  : -35px
+    margin-left : -150px
+    text-align  : center
+
+    h4
+      margin-top : 15px
+
 /* Ende IDs & Classes */
 
 /* CODE FOR DROPDOWNS */
