--- a/priv/admin/css/reusable.styl
+++ b/priv/admin/css/reusable.styl
@@ -69,6 +69,10 @@ dimensions(wUnit = auto, hUnit = auto)
   width  : wUnit
   height : hUnit
 
+minDimensions(wUnit = auto, hUnit = auto)
+  min-width  : wUnit
+  min-height : hUnit
+
 absoluteLeft(lUnit, tUnit)
   position : absolute
   left     : lUnit
