--- a/priv/admin/css/compiled/style.css
+++ b/priv/admin/css/compiled/style.css
@@ -441,6 +441,32 @@ footer .side-line {
   display: block;
   background: transparent;
 }
+.page-loading {
+  width: 100%;
+  height: 100%;
+  min-width: 100%;
+  min-height: 300px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  border-radius: 4px;
+  position: relative;
+  margin-top: 35px;
+}
+.page-loading .loading-info {
+  width: 300px;
+  height: 75px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin-top: -35px;
+  margin-left: -150px;
+  text-align: center;
+}
+.page-loading .loading-info h4 {
+  margin-top: 15px;
+}
 .gui-dropdown-wrapper {
   width: auto;
   height: 30px;
