Enable RiakControl.LoadingRoute for Ember 1.0
This commit adds loading spinners to the various Riak Control
states and uses Ember's loadingRoute functionality where
possible.

LoadingRoute works by default on the `snapshot` and `nodes` pages
because, in the router, each state's `model` property returns an
instance of `this.store.find` which Ember interprets to involve a
`Promise` object. Since we have to return manually instantiated
objects in the `model` property for the `cluster` and `ring` routes,
we can't return a `Promise` object and thus have to manually
render the loading template for those two states.

--- a/priv/admin/css/general.styl
+++ b/priv/admin/css/general.styl
@@ -62,6 +62,34 @@ th
 
 /* IDs & Classes */
 
+.spinner-box
+  corners()
+  text-align : center
+  background : rgba(255, 255, 255, .05)
+  padding    : 25px
+
+  img, h4
+    vertical-align : middle
+
+  h4
+    opaque(.8)
+    display      : inline-block
+    padding-top  : 6px
+    padding-left : 10px
+    line-height  : 1.2
+
+  &.loading-route
+    margin-top  : 50px
+    height      : 250px
+    line-height : 250px
+
+    img, h4
+      display     : inline
+      line-height : 250px
+      margin-top  : 0
+      padding-top : 0
+
+
 #header
   dimensions(100%, 53px)
   border-bottom : 1px solid lightWhite
