--- a/priv/admin/css/compiled/style.css
+++ b/priv/admin/css/compiled/style.css
@@ -220,6 +220,40 @@ th {
   text-align: left;
   padding: 0 5px 5px;
 }
+.spinner-box {
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  border-radius: 4px;
+  text-align: center;
+  background: rgba(255,255,255,0.05);
+  padding: 25px;
+}
+.spinner-box img,
+.spinner-box h4 {
+  vertical-align: middle;
+}
+.spinner-box h4 {
+  opacity: 0.8;
+  filter: alpha(opacity=80);
+  display: inline-block;
+  padding-top: 6px;
+  padding-left: 10px;
+  line-height: 1.2;
+}
+.spinner-box.loading-route {
+  margin-top: 50px;
+  height: 250px;
+  line-height: 250px;
+}
+.spinner-box.loading-route img,
+.spinner-box.loading-route h4 {
+  display: inline;
+  line-height: 250px;
+  margin-top: 0;
+  padding-top: 0;
+}
 #header {
   width: 100%;
   height: 53px;
@@ -1185,28 +1219,6 @@ div.tooltip:hover > span {
 }
 #cluster-page h3 {
   font-family: 'noticia', georgia, serif;
-}
-#cluster-page .spinner-box {
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  -ms-border-radius: 4px;
-  -o-border-radius: 4px;
-  border-radius: 4px;
-  text-align: center;
-  background: rgba(255,255,255,0.05);
-  padding: 25px;
-}
-#cluster-page .spinner-box img,
-#cluster-page .spinner-box h4 {
-  vertical-align: middle;
-}
-#cluster-page .spinner-box h4 {
-  opacity: 0.8;
-  filter: alpha(opacity=80);
-  display: inline-block;
-  padding-top: 6px;
-  padding-left: 10px;
-  line-height: 1.2;
 }
 #cluster-page .actions-container {
   -webkit-transition: height 0.4s ease;
