--- a/priv/admin/js/templates/application.hbs
+++ b/priv/admin/js/templates/application.hbs
@@ -3,6 +3,7 @@
         <a id="riak-control-logo"></a>
         <nav>
             <ul id="nav-ul">
+                <li id="nav-stats" class="nav-li">{{#linkTo "stats" classNames="gui-text-bold nav-item"}}{{/linkTo}}<span class="indicator"></span></li>
                 <li id="nav-ring" class="nav-li">{{#linkTo "ring" classNames="gui-text-bold nav-item"}}{{/linkTo}}<span class="indicator"></span></li>
                 <li id="nav-nodes" class="nav-li">{{#linkTo "nodes" classNames="gui-text-bold nav-item"}}{{/linkTo}}<span class="indicator"></span></li>
                 <li id="nav-cluster" class="nav-li">{{#linkTo "cluster" classNames="gui-text-bold nav-item"}}{{/linkTo}}<span class="indicator"></span></li>
