no more manual start command on graphs

--- a/priv/admin/js/templates/stats.hbs
+++ b/priv/admin/js/templates/stats.hbs
@@ -19,7 +19,9 @@
     {{/if}}
 
     <div id="stats-area">
-      <div id="graphs"></div>
+      <div id="graphs">
+        {{view RiakControl.statGraphs}}
+      </div>
       <div id="add-new-graph">
         {{view RiakControl.AddGraphSelectView
                valueBinding="selectedStat"}}
