Fix dropdown for replace not not populating correctly
    - Add correct optionValuePath to RiakControl.ClusterItemSelectView
    - Change `replacement` to `content.replacement` because once I fixed the dropdown,
      it exposed another bug where the replacement field in the staged plan wasn't populating

--- a/priv/admin/js/templates/staged_cluster_item.hbs
+++ b/priv/admin/js/templates/staged_cluster_item.hbs
@@ -20,7 +20,7 @@
         {{#if isReplaced}}
             <div class="item4 replacing-box">
                 <div class="gui-text field-container inline-block">
-                    <div class="name gui-field">{{replacement}}</div>
+                    <div class="name gui-field">{{content.replacement}}</div>
                 </div>
             </div>
         {{/if}}
