--- a/priv/admin/js/templates/current_cluster_item.hbs
+++ b/priv/admin/js/templates/current_cluster_item.hbs
@@ -75,7 +75,12 @@
                             <div class="gui-dropdown-wrapper replacement-node-dropdown">
                                 <div class="gui-dropdown-bg gui-text">Select Replacement Node</div>
                                 <div class="gui-dropdown-cap left"></div>
-                                {{view RiakControl.ClusterItemSelectView prompt="Select Replacement Node" classNames="gui-dropdown" contentBinding="controller.joiningNodes" optionLabelPath="content.name"}}
+                                {{view RiakControl.ClusterItemSelectView
+                                       prompt="Select Replacement Node"
+                                       classNames="gui-dropdown"
+                                       contentBinding="controller.joiningNodes"
+                                       optionLabelPath="content.name"
+                                       optionValuePath="content.name"}}
                             </div>
                             <div class="gui-checkbox-wrapper">
                                 <input class="gui-checkbox" type="checkbox" {{bindAttr name="name" id="forceReplaceCheck"}} value="true" />
