--- a/priv/admin/css/compiled/style.css
+++ b/priv/admin/css/compiled/style.css
@@ -3742,6 +3742,9 @@ div.tooltip:hover > span {
 #stats-page svg {
   font: 12px 'titillium';
 }
+#stats-page path.line-marker {
+  display: none !important;
+}
 #stats-page text {
   fill: #ccc;
 }
@@ -3754,6 +3757,7 @@ div.tooltip:hover > span {
 #stats-page .chart-container {
   width: 50%;
   float: left;
+  position: relative;
 }
 #stats-page .chart-container .chart-wrapper {
   -webkit-border-radius: 4px;
@@ -3762,8 +3766,8 @@ div.tooltip:hover > span {
   -o-border-radius: 4px;
   border-radius: 4px;
   background: rgba(0,0,0,0.35);
-  padding: 10px;
-  margin: 10px;
+  padding: 10px 0;
+  margin: 10px 15px;
 }
 #stats-page #stats-area {
   margin: 0 auto;
@@ -3785,13 +3789,50 @@ div.tooltip:hover > span {
   cursor: pointer;
 }
 #stats-page .remove-graph {
-  float: right;
+  width: 25px;
+  height: 25px;
+  -webkit-transition: opacity 0.5s ease;
+  -moz-transition: opacity 0.5s ease;
+  -ms-transition: opacity 0.5s ease;
+  -webkit-transition: opacity 0.5s ease;
+  -moz-transition: opacity 0.5s ease;
+  -o-transition: opacity 0.5s ease;
+  transition: opacity 0.5s ease;
+  display: block;
+  background: url("/admin/ui/images/close-general.png") left top no-repeat transparent;
   cursor: pointer;
-  margin-top: 25px;
+  position: absolute;
+  right: 0;
+  top: 0;
+  margin: 40px 16px 0 0;
+  opacity: 0.25;
+}
+#stats-page .remove-graph:hover {
+  -webkit-transition: opacity 0.2s ease;
+  -moz-transition: opacity 0.2s ease;
+  -ms-transition: opacity 0.2s ease;
+  -webkit-transition: opacity 0.2s ease;
+  -moz-transition: opacity 0.2s ease;
+  -o-transition: opacity 0.2s ease;
+  transition: opacity 0.2s ease;
+  opacity: 0.8;
 }
 #stats-page #graphs h2 {
   margin-top: 25px;
+  margin-bottom: 12px;
+  padding-bottom: 0;
   text-transform: capitalize;
+  margin-left: 15px;
+  max-width: 420px;
+  line-height: 1em;
+  height: 2em;
+  position: relative;
+}
+#stats-page #graphs h2 span {
+  display: block;
+  position: absolute;
+  bottom: 0;
+  padding: 0 0 8px 0;
 }
 #stats-page .node-tag {
   -webkit-border-radius: 4px;
@@ -3825,4 +3866,7 @@ div.tooltip:hover > span {
 }
 #stats-page .node-tag .rm-node:hover {
   background: rgba(0,0,0,0.15);
+}
+#stats-page #add-new-graph select {
+  margin-top: 42px;
 }
