--- a/priv/admin/css/stats.styl
+++ b/priv/admin/css/stats.styl
@@ -22,6 +22,9 @@ CSS to be applied ONLY on the cluster page
   .line
     line()
 
+  path.line-marker
+    display : none !important
+
   text
     fill : mediumGray
    
@@ -36,12 +39,13 @@ CSS to be applied ONLY on the cluster page
   .chart-container
     width : 50%
     float: left
+    position: relative
 
     .chart-wrapper
       corners()
       background : darkened
-      padding    : 10px
-      margin     : 10px
+      padding    : 10px 0
+      margin     : 10px 15px  
   
   #stats-area
     margin : 0 auto
@@ -61,18 +65,42 @@ CSS to be applied ONLY on the cluster page
       cursor : pointer
 
   .remove-graph
-    float      : right
+    dimensions(25px, 25px)
+    css-transition(opacity .5s ease)
+    display    : block
+    background : url('/admin/ui/images/close-general.png') left top no-repeat transparent
     cursor     : pointer
-    margin-top : 25px
+    position   : absolute
+    right      : 0
+    top        : 0
+    margin     : 40px 16px 0 0
+    opacity    : .25
+
+    &:hover
+      css-transition(opacity .2s ease)
+      opacity : .8
 
   #graphs
     
     h2
       margin-top     : 25px
+      margin-bottom  : 12px
+      padding-bottom : 0
       // Floating this h2 causes the graph to perpetually
       // expand when the window is resized.
       //float          : left
       text-transform : capitalize
+      margin-left    : 15px
+      max-width      : 420px
+      line-height    : 1em
+      height         : 2em
+      position       : relative
+
+      span
+        display  : block
+        position : absolute
+        bottom   : 0
+        padding  : 0 0 8px 0
 
   .node-tag
     corners()
@@ -97,6 +125,9 @@ CSS to be applied ONLY on the cluster page
       &:hover
         background : rgba(0, 0, 0, .15);
 
+  #add-new-graph
+    select
+      margin-top: 42px
 
 
 
