new icon for stats page; better styling for graph titles

--- a/priv/admin/css/general.styl
+++ b/priv/admin/css/general.styl
@@ -11,6 +11,9 @@ html
 body
   padding : 0
 
+strong
+  font-weight : bold
+
 a
   text-decoration : none
 
@@ -135,7 +138,8 @@ th
 #nav-graphs    a { background-position : 14px -192px }
 #nav-logs      a { background-position : 14px -248px }
 #nav-support   a { background-position : 14px -300px }
-#nav-nodes     a { background-position : 15px -392px   }
+#nav-nodes     a { background-position : 15px -392px }
+#nav-stats     a { background-position : 15px -440px }
 
 .nav-item
   dimensions(63px, 49px)
@@ -715,6 +719,9 @@ div.tooltip:hover > span
 
   #nav-ring a
     background-position : 8px -24px
+
+  #nav-stats a
+    background-position : 7px -302px
   
   h1
     hSize(30px, 0, 5px)
