--- a/priv/admin/css/compiled/style.css
+++ b/priv/admin/css/compiled/style.css
@@ -162,6 +162,9 @@ html {
 body {
   padding: 0;
 }
+strong {
+  font-weight: bold;
+}
 a {
   text-decoration: none;
 }
@@ -347,6 +350,9 @@ th {
 }
 #nav-nodes     a {
   background-position: 15px -392px;
+}
+#nav-stats     a {
+  background-position: 15px -440px;
 }
 .nav-item {
   width: 63px;
@@ -1046,6 +1052,9 @@ div.tooltip:hover > span {
   }
   #nav-ring a {
     background-position: 8px -24px;
+  }
+  #nav-stats a {
+    background-position: 7px -302px;
   }
   h1 {
     font-size: 30px;
