Create ability to add nodes to graphs
- Begin each graph with a single node
- Type a node name in a field and hit the add button to add the node to the graph
- Fix a css bug caused by addepar that was affecting svgs on the ring page

--- a/priv/admin/css/compiled/style.css
+++ b/priv/admin/css/compiled/style.css
@@ -2130,6 +2130,9 @@ div.tooltip:hover > span {
     width: 15%;
   }
 }
+#ring-page svg {
+  display: inline;
+}
 #ring-page .error-message {
   font-family: 'noticia', georgia, serif;
   -webkit-box-shadow: 0 2px 3px rgba(0,0,0,0.35);
