--- a/priv/admin/css/ring.styl
+++ b/priv/admin/css/ring.styl
@@ -7,6 +7,9 @@ CSS to be applied ONLY on the ring page
 
 #ring-page
 
+  svg
+    display : inline
+
   .error-message
     copy-font()
     vendor('box-shadow', 0 2px 3px darkened)
