--- a/priv/admin/js/templates/stats.hbs
+++ b/priv/admin/js/templates/stats.hbs
@@ -33,6 +33,8 @@
                   selectedInterval="seconds"
                   selectedSeedColor=colorBase}}
             </div>
+            {{input type="text" value=addField}}
+            <a {{action addNode}}>Add</a>
           </div>
         {{/each}}
         <div class="chart-container add-new"
